--- a/projects/Deep-Learning-Course/Pose-Estimation/index.html
+++ b/projects/Deep-Learning-Course/Pose-Estimation/index.html
@@ -112,6 +112,19 @@ table, th, td {
 
 <h2 id="more-information">2. Architecture</h2>
 
+<h4 id="overview">2.1 Pose Vector</h4>
+
+<ul>
+  <li>We represent the human body as the location `k` joints which we ca;; pose vectors.</li>
+  <li>Data: <a href="https://paperswithcode.com/dataset/lsp">link</a> </li>
+  <li>Report: <a href="/assets/pdf/Projects-Reports/Report_CA2.pdf.pdf">link</a> </li>
+</ul>
+
+
+<h4 id="overview">2.2 CNN Architecture</h4>
+
+<h4 id="overview">2.3 DNN regressor:</h4>
+
 
 <h2 id="more-information">3. Accuracy Metrics</h2>
 
