--- a/projects/Deep-Learning-Course/Pose-Estimation/index.html
+++ b/projects/Deep-Learning-Course/Pose-Estimation/index.html
@@ -115,8 +115,8 @@ table, th, td {
 <h4 id="overview">2.1 Pose Vector</h4>
 
 <ul>
-  <li>We represent the human body as the location `k` joints which we ca;; pose vectors.</li>
-  <li>Data: <a href="https://paperswithcode.com/dataset/lsp">link</a> </li>
+  <li>The authors of this paper have devised a technique to depict the human body in the form of pose. This is achieved by encoding the location of all k body parts into joints which are collectively known as a pose vector. The definition of this pose vector is outlined in the paper.</li>
+  <li>In this context, the notation yi refers to the x and y coordinates representing the location of the ith body joint.</li>
   <li>Report: <a href="/assets/pdf/Projects-Reports/Report_CA2.pdf.pdf">link</a> </li>
 </ul>
 
