--- a/projects/Deep-Learning-Course/Pose-Estimation/index.html
+++ b/projects/Deep-Learning-Course/Pose-Estimation/index.html
@@ -187,7 +187,7 @@ Another metric called the Percent of Detected Joints (PDJ) has been proposed to 
 <ul>
   <li>Code: <a href="https://github.com/aminfadaei116/Deep-Learning-Course/tree/master/CA2">link</a> </li>
   <li>Data: <a href="https://paperswithcode.com/dataset/lsp">link</a> </li>
-  <li>Report: <a href="/assets/pdf/Projects-Reports/Report_CA2.pdf.pdf">link</a> </li>
+  <li>Report: <a href="/assets/pdf/Projects-Reports/Report_CA2.pdf">link</a> </li>
 </ul>
 
   </div>
