--- a/projects/Deep-Learning-Course/Pose-Estimation/index.html
+++ b/projects/Deep-Learning-Course/Pose-Estimation/index.html
@@ -104,7 +104,10 @@ table, th, td {
 
 <p><br /></p>
 
-
+<div style="align: left; text-align:center;">
+    <img src="/assets/img/pose_10_v2.PNG" width="65%" height="auto"  id="figure8" />
+    <div class="caption" >Figure 1: An overview of the model: Image from the original paper</div>
+</div>
 
 <h2 id="more-information">1. Introduction</h2>
 
@@ -125,7 +128,7 @@ table, th, td {
   </div>
   <li>Finally we get the normalized Pose vector coordinates.</li>
   <div style="align: left; text-align:center;">
-    <img src="/assets/img/pose_2.PNG" width="50%" height="auto"  id="figure1" />
+    <img src="/assets/img/pose_2.PNG" width="45%" height="auto"  id="figure1" />
   </div>
 
 </ul>
@@ -155,7 +158,7 @@ table, th, td {
 
 <h4 id="overview">2.3 DNN regressor:</h4>
 <div style="align: left; text-align:center;">
-    <img src="/assets/img/P8.PNG" width="65%" height="auto"  id="figure8" />
+    <img src="/assets/img/pose_8.PNG" width="65%" height="auto"  id="figure8" />
     <div class="caption" >Figure 1: An overview of the model: Image from the original paper</div>
 </div>
 
@@ -167,7 +170,7 @@ table, th, td {
   </div>
   <li>Where `b^0` represents full image or bounding box obtained by a person detector.</li>
   <div style="align: left; text-align:center;">
-    <img src="/assets/img/pose_6.PNG" width="50%" height="auto"  id="figure5" />
+    <img src="/assets/img/pose_6.PNG" width="55%" height="auto"  id="figure5" />
   </div>
   <li>where diam(y) is the distance of opposing joints, such as left shoulder and right hips, and then scaled by `sigma` to make it  `sigma` `diam(y)`.</li>
 </ul>
