--- a/projects/Deep-Learning-Course/Pose-Estimation/index.html
+++ b/projects/Deep-Learning-Course/Pose-Estimation/index.html
@@ -192,6 +192,7 @@ Another metric called the Percent of Detected Joints (PDJ) has been proposed to 
 
 <div style="align: left; text-align:center;">
     <img src="/assets/img/pose_pdj.PNG" width="45%" height="auto"  id="figure3" />
+    <div class="caption" >Figure 1: An overview of the model: Image from the original paper</div>
   </div>
 
 <h2 id="more-information">4. Results</h2>
@@ -201,6 +202,7 @@ Another metric called the Percent of Detected Joints (PDJ) has been proposed to 
 
 <div style="align: left; text-align:center;">
     <img src="/assets/img/pose_7_v2.PNG" width="65%" height="auto"  id="figure8" />
+    <div class="caption" >Figure 1: An overview of the model: Image from the original paper</div>
     <div class="caption" >Figure 1: An overview of the model: Image from the original paper</div>
 </div>
 
