--- a/projects/Deep-Learning-Course/Pose-Estimation/index.html
+++ b/projects/Deep-Learning-Course/Pose-Estimation/index.html
@@ -106,7 +106,7 @@ table, th, td {
 
 <div style="align: left; text-align:center;">
     <img src="/assets/img/pose_10_v2.PNG" width="65%" height="auto"  id="figure8" />
-    <div class="caption" >Figure 1: An overview of the model: Image from the original paper</div>
+    <div class="caption" >Figure 1: My result from implementing the <a href="https://arxiv.org/pdf/1312.4659.pdf">DeepPose</a></div>
 </div>
 
 <h2 id="more-information">1. Introduction</h2>
@@ -143,7 +143,7 @@ table, th, td {
   </div>
   <li>The location coordinates were normalized using the following formula, where `theta` denotes trainable parameters (weights and biases) and `psi` denotes the neural architecture applied to normalized pose vector `N(x)`. The predicted output `y*` can be obtained by denormalizing the output `(N-1)`.</li>
   <li>This neural network architecture takes image of size 220×220 and apply an stride of 4.</li>
-  <li>The CNN architecture contains 7 layers which can be listed as : C(55×55×96) — LRN — P — C(27×27×256) — LRN — P — C(13×13×384) — C(13×13×384) — C(13×13×256) — P — F(4096) — F(4096) </li>
+  <li>The CNN architecture contains 7 layers which can be listed as : C(55×55×96) —> LRN — P — `C(27×27×256) — LRN —> P` — C(13×13×384) — C(13×13×384) — C(13×13×256) — P — F(4096) — F(4096) </li>
   <li>Where `C` is convolution layer which uses ReLU as activation function to introduce non-linearity in the model, LRN is local response normalization, `P` is pooling layer, and `F` is fully connected layer.</li>
   <li>The last layer of architecture outputs `2k` joint coordinates.</li>
   <li>The architecture uses `L2` loss function to minimize the distance between predicted coordinates and ground truth loss function.</li>
@@ -158,7 +158,7 @@ table, th, td {
 
 <h4 id="overview">2.3 DNN regressor:</h4>
 <div style="align: left; text-align:center;">
-    <img src="/assets/img/pose_8.PNG" width="65%" height="auto"  id="figure8" />
+    <img src="/assets/img/pose_8.PNG" width="95%" height="auto"  id="figure8" />
     <div class="caption" >Figure 1: An overview of the model: Image from the original paper</div>
 </div>
 
