--- a/projects/Deep-Learning-Course/Pose-Estimation/index.html
+++ b/projects/Deep-Learning-Course/Pose-Estimation/index.html
@@ -159,7 +159,7 @@ table, th, td {
 <h4 id="overview">2.3 DNN regressor:</h4>
 <div style="align: left; text-align:center;">
     <img src="/assets/img/pose_8.PNG" width="95%" height="auto"  id="figure8" />
-    <div class="caption" >Figure 1: An overview of the model: Image from the original paper</div>
+    <div class="caption" >Figure 2: An overview of the model: Image from the original paper</div>
 </div>
 
 <ul>
@@ -184,6 +184,7 @@ The Percentage of Correct Parts (PCP) is a metric used to measure the detection 
 
 <div style="align: left; text-align:center;">
     <img src="/assets/img/pose_pcp.PNG" width="45%" height="auto"  id="figure3" />
+    <div class="caption" >Figure 3: PCP during training</div>
   </div>
 
 <h4 id="overview">3.2 Percent of Detected Joints (PDJ)</h4>
@@ -192,7 +193,7 @@ Another metric called the Percent of Detected Joints (PDJ) has been proposed to 
 
 <div style="align: left; text-align:center;">
     <img src="/assets/img/pose_pdj.PNG" width="45%" height="auto"  id="figure3" />
-    <div class="caption" >Figure 1: An overview of the model: Image from the original paper</div>
+    <div class="caption" >Figure 4: PDJ during training</div>
   </div>
 
 <h2 id="more-information">4. Results</h2>
@@ -202,15 +203,16 @@ Another metric called the Percent of Detected Joints (PDJ) has been proposed to 
 
 <div style="align: left; text-align:center;">
     <img src="/assets/img/pose_7_v2.PNG" width="65%" height="auto"  id="figure8" />
-    <div class="caption" >Figure 1: An overview of the model: Image from the original paper</div>
-    <div class="caption" >Figure 1: An overview of the model: Image from the original paper</div>
+    <div class="caption" >Figure 5: Models output using training image</div>
+
+    
 </div>
 
 <h4 id="overview">4.2 Test images</h4>
 
 <div style="align: left; text-align:center;">
     <img src="/assets/img/pose_9_v2.PNG" width="65%" height="auto"  id="figure8" />
-    <div class="caption" >Figure 1: An overview of the model: Image from the original paper</div>
+    <div class="caption" >Figure 6: Models output using testing image</div>
 </div>
 
 <h2 id="more-information">More infomation</h2>
