--- a/index.html
+++ b/index.html
@@ -123,22 +123,8 @@
           <img class="profile-img img-responsive" src="/assets/img/prof_pic.jpg" />
         </div>
 
-        <p>
-            I'm a Researcher specializing in using Deep Learning models for Computer vision applications. I am currently a member of <a href="https://www.biomotionlab.ca/" target="_blank">BioMotion Lab</a>, and a R&D intern at <a href="https://toronto.ubisoft.com/" target="_blank">Ubisoft Toronto</a>.
-        </p>
-        
-        <p>
-            Currently I am enrolled as a Master's student in the <a href="https://lassonde.yorku.ca/eecs/" target="_blank">Electrical Engineering & Computer Science Department</a> at <a href="https://www.yorku.ca/" target="_blank">York University</a>, supervised by <a href="https://www.biomotionlab.ca/" target="_blank">Prof. Nikolaus Troje</a> and co-supervised by <a href="https://mbrubake.github.io/" target="_blank">Marcus A. Brubaker</a>.
-            My Master's research focuses on using  generative adversarial network models for creating synthatic images.
-        </p>
+        <p> Hi there I am Amin Fadaeinejad, a motivated and driven individual currently working as an R&D intern at <a href="https://toronto.ubisoft.com/ubisoft_la_forge_expands_globally/" target="_blank">Ubisoft La Forge</a> in Toronto. My expertise lies in the field of deep learning and its application in computer vision. At Ubisoft La Forge, I utiliz cutting-edge deep learning models to develop tools that assist artists in creating models more efficiently. In addition to my work at Ubisoft, I am also a research assistant at York University supervised by <a href="https://www.biomotionlab.ca/" target="_blank">Prof. Nikolaus Troje</a> and co-supervised by <a href="https://mbrubake.github.io/" target="_blank">Marcus A. Brubaker</a>, where I specialize in the application of deep learning in computer vision. With my strong background in deep learning and passion for developing innovative solutions, I am sure to make a significant impact in his field. </p>
 
-
-        <p>
-            Before I joined BioMotion Lab, I graduated with an B.Sc. in Electrical and Computer Engineering
-            from the <a href="https://ut.ac.ir/en" target="_blank">University Of Tehran</a>, Iran.
-            In my undergrad thesis I used Machine Learning methods to identify Car Specifications such as model & colour during day/night and different weather.
-            During that time I was supervised by <a  href="https://scholar.google.com/citations?user=zqa4EY0AAAAJ&hl=en" target="_blank">Dr. Reshad Hoesseini</a>.
-        </p>
     </div>
 </div>
 
