--- a/index.html
+++ b/index.html
@@ -123,7 +123,11 @@
           <img class="profile-img img-responsive" src="/assets/img/prof_pic.jpg" />
         </div>
 
-        <p> Hi there I am Amin Fadaeinejad, a motivated and driven individual currently working as an R&D intern at <a href="https://toronto.ubisoft.com/ubisoft_la_forge_expands_globally/" target="_blank">Ubisoft La Forge</a> in Toronto. My expertise lies in the field of deep learning and its application in computer vision. At Ubisoft La Forge, I utiliz cutting-edge deep learning models to develop tools that assist artists in creating models more efficiently. In addition to my work at Ubisoft, I am also a research assistant at York University supervised by <a href="https://www.biomotionlab.ca/" target="_blank">Prof. Nikolaus Troje</a> and co-supervised by <a href="https://mbrubake.github.io/" target="_blank">Marcus A. Brubaker</a>, where I specialize in the application of deep learning in computer vision. With my strong background in deep learning and passion for developing innovative solutions, I am sure to make a significant impact in his field. </p>
+        <p> Hi there I am Amin Fadaeinejad, a motivated and driven individual currently working as an R&D intern at <a href="https://toronto.ubisoft.com/ubisoft_la_forge_expands_globally/" target="_blank">Ubisoft La Forge</a> in Toronto. 
+
+        My expertise lies in the field of deep learning and its application in computer vision. At Ubisoft La Forge, I utiliz cutting-edge deep learning models to develop tools that assist artists in creating models more efficiently.</p> 
+
+        <p> In addition to my work at Ubisoft, I am also a research assistant at York University supervised by <a href="https://www.biomotionlab.ca/" target="_blank">Prof. Nikolaus Troje</a> and co-supervised by <a href="https://mbrubake.github.io/" target="_blank">Marcus A. Brubaker</a>, where I specialize in the application of deep learning in computer vision. With my strong background in deep learning and passion for developing innovative solutions, I am sure to make a significant impact in his field. </p>
 
     </div>
 </div>
