--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -110,6 +110,11 @@ h3 {text-align: center;}
 <p>This Page will be updated in the future!</p>
 
 
+
+
+
+
+
 <!-- <h2 id="overview">overview</h2>
 
 <p><br /></p>
@@ -119,12 +124,13 @@ h3 {text-align: center;}
 <p><br /></p>
 
 
-
+-->
 
 
 
 <h2 id="overview">Usage Trend</h2>
 
+Figure \ref{Graph4} presents bar graphs that show the cumulative number of bikes, stations, and monthly trips since June 2013. The data reveals a significant increase in the number of stations since 2013, while the number of bikes has remained relatively stable since December 2020. However, the number of trips per month has consistently increased each year despite variations in seasons and weather conditions, indicating a recurring pattern.
 
 
 <h2 id="overview">Stations’ Location Trends</h2>
@@ -145,8 +151,30 @@ h3 {text-align: center;}
 <h2 id="overview">Proposed Expansion Policy</h2>
 
 
- -->
 
+
+<h2 id="overview">Conclusion</h2>
+
+In conclusion, we can say that there is indeed a wealth of information within this dataset, much of which has yet to be explored. In our study, which was performed within the scope of a graduate-level course, we found the following:
+
+
+<ul>
+  <li>The number of active bikes and stations has seen constant growth throughout these 103 months of data collection, with an exceptionally fast rate in 2020.</li>
+  <li>The number of trips made follows a seasonal trend in which more trips are made during warm seasons, in contrast to cold seasons.</li>
+  <li>Most trips start and end within the traffic rush hours, meaning that this bike-sharing system is used as a solution for NYC traffic congestion.</li>
+  <li>Most trips take more than 15 minutes, while a standard ride is expected to be 30 minutes according to the company's policy. This suggests that administrators can adjust the trip standard duration to further increase overall profitability. This also indicates a need for more flexible usage plans for customers who use these bikes for a longer duration.</li>
+  <li>These bikes are used similarly throughout the week, which means that the maintenance schedule should be adjusted to other factors such as traffic congestion on streets rather than bike usage in general.</li>
+  <li>The network expansion policy is correlated with housing unit density and office locations.</li>
+  <li>Although the pandemic imposed a radical drop in the number of trips made in 2020, bikeshare has recovered its usual trend, whereas many public transportation systems still lack safety standards.</li>
+  <li>Commonly used stations are located within the financial district of Manhattan.</li>
+  <li>The most used trip is a path around Central Park.</li>
+  <li>Stations that are in the central region of Manhattan sink (bikes end up there), while the stations in the western area of Queens are a source (bikes start from there).</li>
+  <li>Bikes are relocated via network admins for allocation purposes as well as maintenance.</li>
+  <li>Bike relocations follow the reversed trend in terms of allocation compared to usual trips.</li>
+  <li>Interactive visualization recovers some information that is hidden with static visualization.</li>
+  </div>
+
+</ul>
 
 
 
