added new html files

--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -115,45 +115,56 @@ h3 {text-align: center;}
 
 
 
-<!-- <h2 id="overview">overview</h2>
+ <h2 id="overview">overview</h2>
 
 <p><br /></p>
 <h3><iframe width="560" height="315" src="https://www.youtube.com/embed/We84bzNKbOA" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen=""></iframe>
+  <iframe src="/assets/css/citibike/Top50Start.html"></iframe>
 </h3>
 
 <p><br /></p>
 
 
--->
+
+
+<h2 id="more-information">1. Introduction</h2>
 
 
 
-<h2 id="overview">Usage Trend</h2>
+<h2 id="more-information">1. Introduction</h2>
+
+
+
+<h2 id="more-information">3. Finding</h2>
+
+
+
+<h4 id="overview">3.1 Usage Trend</h4>
 
 Figure \ref{Graph4} presents bar graphs that show the cumulative number of bikes, stations, and monthly trips since June 2013. The data reveals a significant increase in the number of stations since 2013, while the number of bikes has remained relatively stable since December 2020. However, the number of trips per month has consistently increased each year despite variations in seasons and weather conditions, indicating a recurring pattern.
 
 
-<h2 id="overview">Stations’ Location Trends</h2>
+<h4 id="overview">3.2 Stations’ Location Trends</h4>
 
 
 
 
 
-<h2 id="overview">Effect of Pandemic</h2>
+<h4 id="overview">3.3 Effect of Pandemic</h4>
 
 
 
-<h2 id="overview">Commonly Used Locations</h2>
-
-
-
-
-<h2 id="overview">Proposed Expansion Policy</h2>
+<h4 id="overview">3.4 Commonly Used Locations</h4>
 
 
 
 
-<h2 id="overview">Conclusion</h2>
+<h4 id="overview">3.5 Proposed Expansion Policy</h4>
+
+
+
+
+<h2 id="overview">4. Conclusion</h2>
 
 In conclusion, we can say that there is indeed a wealth of information within this dataset, much of which has yet to be explored. In our study, which was performed within the scope of a graduate-level course, we found the following:
 
