--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -118,9 +118,8 @@ h3 {text-align: center;}
  <h2 id="overview">overview</h2>
 
 <p><br /></p>
-<h3><iframe width="560" height="315" src="https://www.youtube.com/embed/We84bzNKbOA" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen=""></iframe>
-  <iframe src="/assets/css/citibike/Top50Start.html"></iframe>
-</h3>
+  <iframe width="100%" height="100%" src="/assets/css/citibike/Top50Start.html"></iframe>
+    <iframe width="200%" height="200%" src="/assets/css/citibike/Top50Start.html"></iframe>
 
 <p><br /></p>
 
