--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -119,7 +119,7 @@ h3 {text-align: center;}
 
 <p><br /></p>
   <iframe width="100%" height="100%" src="/assets/css/citibike/Top50Start.html"></iframe>
-    <iframe width="200%" height="200%" src="/assets/css/citibike/Top50Start.html"></iframe>
+    <iframe width="400" height="400" src="/assets/css/citibike/Top50Start.html"></iframe>
 
 <p><br /></p>
 
