--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -97,23 +97,18 @@ h3 {text-align: center;}
   <div class="content">
     
   <h1>Citi Bike Analysis (Coming Soon)</h1>
-  <h6>.</h6>
-
-
-<p><br /></p>
-
-<p>There are many bike share systems around the gload these days, big cities such as New York, London, Paris, Toronto, etc. In order to improve their business big companies use their data gathered from the users. Citi Bike dataset is one of the few free large datasets out there that data analytics can use to extract interesting insights from it. </p>
-
-<p><br />Since 2013 a shared bicycle system known as Citi Bike is available in New York City. The benefits of having such a system include reducing New Yorkers’ dependence on automobiles and encouraging public health through the exercise attained by cycling. Additionally, users who would otherwise spend money on public transit may find bicycling more economical – so long as they are aware of Citibike's pricing constraints.</p>
-
-
-<p>This Page will be updated in the future!</p>
 
 
 
 
+<h2 id="more-information">1. Introduction</h2>
 
 
+Bicycling is an activity that yields many benefits. Riders improve their health through exercise, and traffic congestion is reduced when riders move out of cars, resulting in a corresponding reduction in pollution from carbon emissions. In recent years, Bike Sharing has become popular in a growing number of cities worldwide. The NYC “CitiBike” bicycle sharing scheme went live in midtown and downtown Manhattan in 2013 and has since expanded, as measured by daily ridership and the expanding geographic footprint, incorporating an increasing number of “docking stations” as the system welcomes riders in Brooklyn, Queens, and previously unserved northern parts of Manhattan.
+
+One problem that many bikeshare systems face is money. An increase in the number of riders who want to use the system necessitates the purchase of more bikes and their deployment to accommodate them. Heavy ridership induces wear on the bikes, requiring more frequent repairs. However, an increase in the number of trips does not necessarily translate to an increase in revenue because clever riders can avoid paying surcharges by keeping the length of each trip below a specified limit (either 30 or 45 minutes, depending on user category).
+
+We seek to examine Citibike trip data to extract meaningful relationships and conclusions that will provide insight for executive sectors. Our findings can be categorized under three headings: usage trends, common locations, and expansion policy. In the first category, we study usage trends on multiple scales ranging from hourly to yearly. The second category is dedicated to finding geographical relationships between commonly used stations, and the last category suggests an expansion policy based on the current station density and frequency of trips made.
 
  <h2 id="overview">overview</h2>
 
@@ -124,9 +119,6 @@ h3 {text-align: center;}
 <p><br /></p>
 
 
-
-
-<h2 id="more-information">1. Introduction</h2>
 
 
 
