--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -96,19 +96,21 @@ h3 {text-align: center;}
   <!-- Content -->
   <div class="content">
     
-  <h1>Citi Bike Analysis (Coming Soon)</h1>
+  <h1>Citi Bike Analysis</h1>
 
 
 
 
 <h2 id="more-information">1. Introduction</h2>
 
+<p>
+Bicycling is an activity that yields many benefits. Riders improve their health through exercise, and traffic congestion is reduced when riders move out of cars, resulting in a corresponding reduction in pollution from carbon emissions. In recent years, Bike Sharing has become popular in a growing number of cities worldwide. The NYC “CitiBike” bicycle sharing scheme went live in midtown and downtown Manhattan in 2013 and has since expanded, as measured by daily ridership and the expanding geographic footprint, incorporating an increasing number of “docking stations” as the system welcomes riders in Brooklyn, Queens, and previously unserved northern parts of Manhattan.</p>
 
-Bicycling is an activity that yields many benefits. Riders improve their health through exercise, and traffic congestion is reduced when riders move out of cars, resulting in a corresponding reduction in pollution from carbon emissions. In recent years, Bike Sharing has become popular in a growing number of cities worldwide. The NYC “CitiBike” bicycle sharing scheme went live in midtown and downtown Manhattan in 2013 and has since expanded, as measured by daily ridership and the expanding geographic footprint, incorporating an increasing number of “docking stations” as the system welcomes riders in Brooklyn, Queens, and previously unserved northern parts of Manhattan.
+<p>
+One problem that many bikeshare systems face is money. An increase in the number of riders who want to use the system necessitates the purchase of more bikes and their deployment to accommodate them. Heavy ridership induces wear on the bikes, requiring more frequent repairs. However, an increase in the number of trips does not necessarily translate to an increase in revenue because clever riders can avoid paying surcharges by keeping the length of each trip below a specified limit (either 30 or 45 minutes, depending on user category).</p>
 
-One problem that many bikeshare systems face is money. An increase in the number of riders who want to use the system necessitates the purchase of more bikes and their deployment to accommodate them. Heavy ridership induces wear on the bikes, requiring more frequent repairs. However, an increase in the number of trips does not necessarily translate to an increase in revenue because clever riders can avoid paying surcharges by keeping the length of each trip below a specified limit (either 30 or 45 minutes, depending on user category).
-
-We seek to examine Citibike trip data to extract meaningful relationships and conclusions that will provide insight for executive sectors. Our findings can be categorized under three headings: usage trends, common locations, and expansion policy. In the first category, we study usage trends on multiple scales ranging from hourly to yearly. The second category is dedicated to finding geographical relationships between commonly used stations, and the last category suggests an expansion policy based on the current station density and frequency of trips made.
+<p>
+We seek to examine Citibike trip data to extract meaningful relationships and conclusions that will provide insight for executive sectors. Our findings can be categorized under three headings: usage trends, common locations, and expansion policy. In the first category, we study usage trends on multiple scales ranging from hourly to yearly. The second category is dedicated to finding geographical relationships between commonly used stations, and the last category suggests an expansion policy based on the current station density and frequency of trips made.</p>
 
  <h2 id="overview">overview</h2>
 
@@ -122,8 +124,16 @@ We seek to examine Citibike trip data to extract meaningful relationships and co
 
 
 
-<h2 id="more-information">1. Introduction</h2>
+<h2 id="more-information">2. Interactive Data Visualization</h2>
 
+One of the challenges of visualizing rich data is the static scale of figures. For a data set as huge as the one we are working with, there is useful information at different scales. To address this problem, we used an interactive visualization library called <a href="https://python-visualization.github.io/folium/">Folium</a>. A demo of such interactive visualization can be seen here.
+
+
+<ul>
+  <li>The number of active bikes and stations has seen constant growth throughout these 103 months of data collection, with an exceptionally fast rate in 2020.</li>
+
+
+</ul>
 
 
 <h2 id="more-information">3. Finding</h2>
@@ -174,7 +184,6 @@ In conclusion, we can say that there is indeed a wealth of information within th
   <li>Bikes are relocated via network admins for allocation purposes as well as maintenance.</li>
   <li>Bike relocations follow the reversed trend in terms of allocation compared to usual trips.</li>
   <li>Interactive visualization recovers some information that is hidden with static visualization.</li>
-  </div>
 
 </ul>
 
