--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -129,8 +129,21 @@ We seek to examine Citibike trip data to extract meaningful relationships and co
 One of the challenges of visualizing rich data is the static scale of figures. For a data set as huge as the one we are working with, there is useful information at different scales. To address this problem, we used an interactive visualization library called <a href="https://python-visualization.github.io/folium/">Folium</a>. A demo of such interactive visualization can be seen here.
 
 
+
+<h4 id="overview">2.1 Usage Trend</h4>
+
+
+
+<h4 id="overview">2.2 Usage Trend</h4>
+
+<h4 id="overview">2.3 Usage Trend</h4>
+
+<h4 id="overview">2.4 Usage Trend</h4>
+
+
+
 <ul>
-  <li>The number of active bikes and stations has seen constant growth throughout these 103 months of data collection, with an exceptionally fast rate in 2020.</li>
+  <li>The top 50 stations for <a href="https://aminfadaei116.github.io/assets/css/citibike/StartCircle.html">starting</a> and <a href="https://aminfadaei116.github.io/assets/css/citibike/EndCircle.html">ending</a>.</li>
 
 
 </ul>
